Misc UI fixes: training text, notification spacing, notification::after grow direction

--- a/style/new_geisha/new_geisha.css
+++ b/style/new_geisha/new_geisha.css
@@ -164,6 +164,7 @@ body {
     display: inline-block;
     float: none;
     margin-left: var(--content-sidebar-gap);
+    margin-right: var(--content-sidebar-gap);
     margin-top: var(--topbar-height);
     margin-bottom: var(--hotbar-height);
     width: var(--content-width);
